--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mpxjs/api-proxy": "^2.3.0",
     "@mpxjs/core": "^2.4.0",
+    "mini-ali-ui": "^1.0.8",
     "vant-weapp": "^0.5.28"
   },
   "devDependencies": {
